force-app/main/default/objects/Account_Intelligence__c/Account_Intelligence__c.object-meta.xml
<CustomObject>
    <label>Account Intelligence</label>
    <nameField>
        <displayFormat>AI{0000}</displayFormat>
        <label>Account Intelligence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Intelligence</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>