force-app/main/default/objects/Account_Intelligence__c/fields/CEO_Personal_Phone__c.field-meta.xml
<CustomField>
    <fullName>CEO_Personal_Phone__c</fullName>
    <label>CEO Personal Phone</label>
    <type>Phone</type>
</CustomField>