force-app/main/default/objects/Account_Intelligence__c/fields/Decision_Maker_Email__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Email__c</fullName>
    <label>Decision Maker Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>