force-app/main/default/objects/Account_Intelligence__c/fields/Key_decision_maker__c.field-meta.xml
<CustomField>
    <fullName>Key_decision_maker__c</fullName>
    <label>Key decision maker</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>