force-app/main/default/objects/Account_Intelligence__c/fields/Mission_Status__c.field-meta.xml
<CustomField>
    <fullName>Mission_Status__c</fullName>
    <label>Mission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--- Select ---</fullName>
                <default>true</default>
                <label>--- Select ---</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>