force-app/main/default/objects/Account_Intelligence__c/fields/Review_Date_Closure__c.field-meta.xml
<CustomField>
    <fullName>Review_Date_Closure__c</fullName>
    <formula>CASE(MOD(Review_Date__c - DATE(1900, 1, 7), 7), 0, Review_Date__c +3, 1, Review_Date__c+3, 2, Review_Date__c +3,3, Review_Date__c+5, 4, Review_Date__c+5, 5, Review_Date__c+5, 6, Review_Date__c+4,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Date Closure</label>
    <type>Date</type>
</CustomField>