force-app/main/default/objects/Account_Intelligence__c/listViews/Account_Intelligence_Report.listView-meta.xml
<ListView>
    <fullName>Account_Intelligence_Report</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Key_decision_maker__c</columns>
    <columns>Decision_Maker_Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Account Intelligence Report</label>
</ListView>